force-app/main/default/objects/Marketing_Persona__mdt/Marketing_Persona__mdt.object-meta.xml
<CustomObject>
    <description>MIS-4768</description>
    <label>Marketing Persona</label>
    <pluralLabel>Marketing Personas</pluralLabel>
</CustomObject>