force-app/main/default/objects/Marketing_Persona__mdt/fields/Account_SW_Industries__c.field-meta.xml
<CustomField>
    <fullName>Account_SW_Industries__c</fullName>
    <label>Account SW Industries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>