force-app/main/default/objects/Marketing_Persona__mdt/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>MIS-4768</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>