force-app/main/default/objects/Marketing_Persona__mdt/fields/Marketing_Persona_with_Industry__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Persona_with_Industry__c</fullName>
    <description>MIS-4768</description>
    <label>Marketing Persona with Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>