force-app/main/default/objects/Marketing_Persona__mdt/listViews/with_fields.listView-meta.xml
<ListView>
    <fullName>with_fields</fullName>
    <columns>Account_SW_Industries__c</columns>
    <columns>Department__c</columns>
    <columns>Marketing_Persona_with_Industry__c</columns>
    <columns>Marketing_Persona_without_Industry__c</columns>
    <filterScope>Everything</filterScope>
    <label>with fields</label>
    <language>en_US</language>
</ListView>